--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -36,7 +36,7 @@
             <a href="#">Hochschulstrasse 4, Bern</a>
         </p>
     </div>
-    <div class="map_canvas"></div>
+    <div class="map_canvas location"></div>
     <% unless @event.is_deadline_over? %>
         <p>
             <div><%= f.label :dates %><br />
