--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -34,7 +34,7 @@
             <a href="#">Hochschulstrasse 4, Bern</a>
         </p>
     </div>
-    <div class="map_canvas"></div>
+    <div class="map_canvas location"></div>
     <p>
         <div><%= f.label :description %>
             <%= f.text_area :description, size: '60x5', class: "form-control" %>
