Why does this not work?! BUG: It seemed as the 'events' in User didn't contained all events until now. We just never took them from there...

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 <ul>
   <li>Username : <%= @user.username %></li>
   <li>Email : <%= @user.email %></li>
-  <li>Events created : <%= @user.get_created_events.count %></li>
+  <li>Events created : <%= @user.created_events.count %></li>
 </ul>
 <h2>Friends list</h2>
 <ul>
