--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=places&sensor=false"></script>
     <script type="text/javascript" src="http://geoxml3.googlecode.com/svn/branches/polys/geoxml3.js"></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag "//www.google.com/jsapi" %>
+    <%= javascript_include_tag "application", "chartkick" %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= favicon_link_tag %>
 
