Some improvements + more seeds.

--- a/app/views/data_center/show.html.erb
+++ b/app/views/data_center/show.html.erb
@@ -4,6 +4,6 @@
         Distribution of events by sports you took part at
     </div>
     <div class="panel-body">
-        <%= pie_chart @data %>
+        <%= pie_chart @event_sport_data %>
     </div>
 </div>
