--- a/app/views/data_center/show.html.erb
+++ b/app/views/data_center/show.html.erb
@@ -1,35 +1,46 @@
-<h1 class="page-header"><%= fa_icon 'bar-chart' %> Data Center</h1>
-<div class="panel panel-default">
-    <div class="panel-heading">
-        Your personal distribution of events by sports
-    </div>
-    <div class="panel-body">
-        <%= pie_chart @user_event_sport_data %>
+    <h1 class="page-header"><%= fa_icon 'bar-chart' %> Data Center</h1>
+</div>
+<div class="col-lg-6">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            Your personal distribution of participated events by sports
+        </div>
+        <div class="panel-body">
+            <%= pie_chart @user_event_sport_data %>
+        </div>
     </div>
 </div>
-<div class="panel panel-default">
-    <div class="panel-heading">
-        Total distribution of events by sports
-    </div>
-    <div class="panel-body">
-        <%= pie_chart @total_event_sport_data %>
-    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading">
-        Total distribution of events by sports
-    </div>
-    <div class="panel-body">
-        <%= column_chart @user_event_sport_data %>
+    <div class="col-lg-6">
+        <div class="panel panel-default">
+        <div class="panel-heading">
+            Total Spoodle distribution of events by sports
+        </div>
+        <div class="panel-body">
+            <%= pie_chart @total_event_sport_data %>
+        </div>
     </div>
 </div>
-<div class="panel panel-default">
-    <div class="panel-heading">
-        Total distribution of events by sports
-    </div>
-    <div class="panel-body">
-        <%= column_chart @total_event_sport_data %>
+<div class="col-lg-6">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            Amount of events per sport you participated at
+        </div>
+        <div class="panel-body">
+            <%= column_chart @user_event_sport_data %>
+        </div>
     </div>
 </div>
+<div class="col-lg-6">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            Total amount of events per sport on Spoodle
+        </div>
+        <div class="panel-body">
+            <%= bar_chart @total_event_sport_data %>
+        </div>
+    </div>
+</div>
+<div class="col-lg-12">
+
 
 
