WIP, not working! Working on friendships, don't get it, need help...

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,8 +18,7 @@
 <ul>
     <% @user.friendships.each do |f| %>
         <li>
-            <%= link_to f.friend, user_path(f.friend) %>
-            (<%= link_to "Remove", f, :method => "delete" %>)
+            <%= link_to f.friend, user_path(f.friend) %> (<%= link_to "Remove", f, :method => "delete" %>)
         </li>
     <% end %>
 </ul>
