--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -117,6 +117,13 @@
     <hr>
 <% end %>
 
+<% if @event.is_deadline_over? %>
+    <div>
+      <%= link_to event_path(@event), method: :get, format: :ics %>
+    </div>
+    <br/>
+<% end %>
+
 <% if @event.belongs_to?(current_user) %>
     <div style="float: left; width: auto;">
         <%= button_to 'Edit Event', edit_event_path(@event), method: :get, class: "btn btn-info" %>
