Fixed the db problem without altering the model too much. It's a bit hacky because the model implements a "arrow-relation" (" => ") but then only creates half the entries which are needed and infers the other ones. Maybe we should either create all entries (new fried => 2 entries made) or come up with an idea how two model a "<=>" relation properly.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
 <ul>
     <% @user.friendships.each do |f| %>
         <li>
-            <%= link_to f.friend, user_path(f.friend) %> (<%= link_to "Remove", f, :method => "delete" %>)
+            <%= f %> <!-- TODO fix -->
         </li>
     <% end %>
 </ul>
