--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -49,6 +49,11 @@
     </p>
     <p><%= @event.description %></p>
 
+  <div class="social_buttons" style="display: inline">
+    <%= tweet_button(url: "http://www.spoodle.com", via: "spoodle", text: "I'm taking part to a spoodle event!", count: "horizontal") %>
+    <%= like_button(745564808869082, href: "http://www.spoodle.com") %>
+    <%= google_plus_button(href: "http://www.spoodle.com", script: true, size: "medium", annotation: "inline") %>
+  </div>
 </div>
 
 <hr>
@@ -63,6 +68,8 @@
 <% end %>
 
 <hr>
+
+
 
 <% if @event.is_deadline_over? %>
 
