All EventData textfield-attributes can be entered via Event#Edit.

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -103,7 +103,7 @@
 <% if @event.is_passed? %>
     <h3><%= fa_icon 'bar-chart fw' %> Event Data</h3>
     <% @event.event_data.valid_attributes.each do |key, val| %>
-        <%= key.capitalize %>: <%= val %>
+        <p> <%= key.capitalize %>: <%= val %> </p>
     <% end %>
     <% if @event.document %>
         <h4>Map</h4>
