--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -55,14 +55,19 @@
     <div>
         <%= f.label :event_data %><br />
         <%= f.fields_for :event_data do |ff| %>
-            <% if @event.event_data.valid_attributes.has_key? :distance %>
-                <%= ff.label :distance %>
-                <%= ff.text_field :distance, class: "form-control" %>
-            <% end %>
-        <% end %>
 
+            <%= render 'event_data_textfield_attribute', attribute_name: :distance, ff: ff %>
+            <%= render 'event_data_textfield_attribute', attribute_name: :party_1_name, ff: ff %>
+            <%= render 'event_data_textfield_attribute', attribute_name: :party_2_name, ff: ff %>
+            <%= render 'event_data_textfield_attribute', attribute_name: :winner_name, ff: ff %>
+            <%= render 'event_data_textfield_attribute', attribute_name: :score_1, ff: ff %>
+            <%= render 'event_data_textfield_attribute', attribute_name: :score_2, ff: ff %>
+
+    <% end %>
     </div>
     </p>
+
+
     <div style="float: left; width: auto;">
         <div><%= f.submit "Update", class: "btn btn-success" %></div>
     </div>
