--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -49,11 +49,18 @@
     </p>
     <p><%= @event.description %></p>
 
+  <% if @event.is_upcoming? %>
+      <div>
+        <%= button_to "Export event", event_path(@event, format: :ics), method: :get, class: "btn btn-info small"%>
+      </div>
+      <br/>
+  <% end %>
   <div class="social_buttons" style="display: inline">
     <div class="social-button"><%= tweet_button(url: "http://www.spoodle.com", via: "spoodle", text: "I'm taking part to a spoodle event!", count: "horizontal") %></div>
     <div class="social-button"><%= like_button(745564808869082, href: "http://www.spoodle.com") %></div>
     <div class="social-button"><%= google_plus_button(href: "http://www.spoodle.com", script: true, size: "medium", annotation: "inline") %></div>
   </div>
+
 </div>
 
 <hr>
@@ -127,13 +134,6 @@
         <% end %>
     <% end %>
     <hr>
-<% end %>
-
-<% if @event.is_upcoming? %>
-    <div>
-      <%= button_to "Export event", event_path(@event, format: :ics), method: :get, class: "btn btn-info"%>
-    </div>
-    <br/>
 <% end %>
 
 <% if @event.belongs_to?(current_user) %>
