--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,30 +35,22 @@
 </div>
     <div class="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    Signed in as:  <%= current_user.username %>
-                    <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu" role="menu">
-                    <li><%= link_to current_user do %>
-                            <%= fa_icon 'user' %>
-                            Profile
-                        <% end %>
-                    </li>
-                    <li class="divider"></li>
-                    <li><%= link_to edit_user_registration_path do %>
-                            <%= fa_icon 'gear' %>
-                            Settings
-                        <% end %>
-                    </li>
-                    <li class="divider"></li>
-                    <li><%= link_to destroy_user_session_path, :method => :delete do %>
-                            <%= fa_icon 'sign-out' %>
-                            Logout
-                        <% end %>
-                    </li>
-                </ul>
+            <li><%= link_to current_user do %>
+                    <%= fa_icon 'user' %>
+                    <%= current_user.username %>
+                <% end %>
+            </li>
+            <li class="divider"></li>
+            <li><%= link_to edit_user_registration_path do %>
+                    <%= fa_icon 'gear' %>
+                    Settings
+                <% end %>
+            </li>
+            <li class="divider"></li>
+            <li><%= link_to destroy_user_session_path, :method => :delete do %>
+                    <%= fa_icon 'sign-out' %>
+                    Logout
+                <% end %>
             </li>
         </ul>
     </div><!-- /.navbar-collapse -->
@@ -80,22 +72,24 @@
                 <% end %>
             </li>
             <li>
-                <%= link_to events_path do %>
-                    <%= fa_icon 'user fw' %> My Events <span class="badge"><%= amount_own %></span>
-                <% end %>
-            </li>
-            <li>
                 <%= link_to passed_events_path do %>
                     <%= fa_icon 'folder fw' %> Passed Events <span class="badge"><%= amount_passed %></span>
                 <% end %>
             </li>
             <li>
-                <%= link_to data_center_path do %>
-                    <%= fa_icon 'bar-chart fw' %> Data Center</span>
+                <%= link_to events_path do %>
+                    <%= fa_icon 'user fw' %> My Events <span class="badge"><%= amount_own %></span>
                 <% end %>
             </li>
             <li>
-                <a href="#"><i class="fa fa-trophy fa-fw"></i> Global Toplist</a>
+                <%= link_to new_event_path do %>
+                    <%= fa_icon 'plus fw' %> New Event
+                <% end %>
+            </li>
+            <li>
+                <%= link_to data_center_path do %>
+                    <%= fa_icon 'bar-chart fw' %> Data Center
+                <% end %>
             </li>
             <li>
                 <%= link_to users_path do %>
