--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,6 +24,9 @@
         <div><%= f.submit "Register", class: "btn btn-success" %></div>
     </div>
 <% end %>
+<div style="float: left; padding-left: 5px">
+  <%= button_to "Login with Facebook", user_omniauth_authorize_path(:facebook), method: :get, class: "btn btn-info" %>
+</div>
 <div style="float: right; width: auto;">
     <%= button_to 'Discard', unauthenticated_root_path, method: :get, class: "btn btn-warning" %>
 </div>
