EventDatas creation with separated view/controller should work now.

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -117,17 +117,24 @@
 
 <% if @event.is_passed? %>
     <h3><%= fa_icon 'bar-chart fw' %> Event Data</h3>
-    <%= render 'event_datas/text_attribute_show', attribute_name: :distance %>
-    <%= render 'event_datas/text_attribute_show', attribute_name: :party_1_name %>
-    <%= render 'event_datas/text_attribute_show', attribute_name: :party_2_name %>
-    <%= render 'event_datas/text_attribute_show', attribute_name: :winner_name %>
-    <%= render 'event_datas/text_attribute_show', attribute_name: :score_1 %>
-    <%= render 'event_datas/text_attribute_show', attribute_name: :score_2 %>
+    <% if @event.event_data %>
+        <%= render 'event_datas/text_attribute_show', attribute_name: :distance %>
+        <%= render 'event_datas/text_attribute_show', attribute_name: :party_1_name %>
+        <%= render 'event_datas/text_attribute_show', attribute_name: :party_2_name %>
+        <%= render 'event_datas/text_attribute_show', attribute_name: :winner_name %>
+        <%= render 'event_datas/text_attribute_show', attribute_name: :score_1 %>
+        <%= render 'event_datas/text_attribute_show', attribute_name: :score_2 %>
+    <% end %>
     <% if @event.document %>
         <h4>Map</h4>
         <div id="gps" class="map_canvas"></div>
     <% end %>
     <% if @event.belongs_to?(current_user) %>
+        <% unless @event.event_data %>
+            <%= button_to "Enter Event Data", new_event_event_data_path(@event), method: :get, class: "btn btn-success btn-small" %>
+        <% else %>
+            <%= link_to "Delete Event Data", event_event_data_path(@event, @event.event_data), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-xs no-margin" %>
+        <% end %>
         <% unless @event.document %>
             <%= button_to "Add Map", new_event_document_path(@event), method: :get, class: "btn btn-success btn-small" %>
         <% else %>
