--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -133,7 +133,12 @@
         <% unless @event.event_data %>
             <%= button_to "Enter Event Data", new_event_event_data_path(@event), method: :get, class: "btn btn-success btn-small" %>
         <% else %>
-            <%= link_to "Delete Event Data", event_event_data_path(@event, @event.event_data), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-xs no-margin" %>
+            <div style="float: left; width: auto;">
+                <%= button_to 'Edit Event', edit_event_event_data_path(@event, @event.event_data), method: :get, class: "btn btn-info btn-xs no-margin" %>
+            </div>
+            <div style="float: left; width: auto;">
+                <%= link_to "Delete Event Data", event_event_data_path(@event, @event.event_data), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-xs no-margin" %>
+            </div>
         <% end %>
         <% unless @event.document %>
             <%= button_to "Add Map", new_event_document_path(@event), method: :get, class: "btn btn-success btn-small" %>
