--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -68,7 +68,7 @@
 
 <h3><%= fa_icon 'map-marker fw' %> Location</h3>
 <p><%= @event.location %></p>
-<% unless @event.document %>
+<% unless @event.event_data.document %>
     <form>
         <input id="geocomplete" type="hidden" />
     </form>
@@ -76,8 +76,6 @@
 <% end %>
 
 <hr>
-
-
 
 <% if @event.is_deadline_over? %>
 
@@ -124,10 +122,10 @@
         <%= render 'event_datas/text_attribute_show', attribute_name: :winner_name %>
         <%= render 'event_datas/text_attribute_show', attribute_name: :score_1 %>
         <%= render 'event_datas/text_attribute_show', attribute_name: :score_2 %>
-    <% end %>
-    <% if @event.document %>
-        <h4>Map</h4>
-        <div id="gps" class="map_canvas"></div>
+        <% if @event.event_data.document %>
+            <h4>Map</h4>
+            <div id="gps" class="map_canvas"></div>
+        <% end %>
     <% end %>
     <% if @event.belongs_to?(current_user) %>
         <% unless @event.event_data %>
@@ -139,11 +137,11 @@
             <div style="float: left; width: auto;">
                 <%= link_to "Delete Event Data", event_event_data_path(@event, @event.event_data), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-xs no-margin" %>
             </div>
-        <% end %>
-        <% unless @event.document %>
-            <%= button_to "Add Map", new_event_document_path(@event), method: :get, class: "btn btn-success btn-small" %>
-        <% else %>
-            <%= link_to "Delete Map", event_document_path(@event, @event.document), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-xs no-margin" %>
+            <% unless @event.event_data.document %>
+                <%= button_to "Add Map", new_event_event_data_document_path(@event, @event.event_data), method: :get, class: "btn btn-success btn-small" %>
+            <% else %>
+                <%= link_to "Delete Map", event_event_data_document_path(@event, @event.event_data, @event.event_data.document), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-xs no-margin" %>
+            <% end %>
         <% end %>
     <% end %>
     <hr>
@@ -164,7 +162,7 @@
 
 <script>
     $(function(){
-        <% if @event.document %>
+        <% if @event.event_data.document %>
             var myOptions = {
                 center: new google.maps.LatLng(39.397, -100.644),
                 zoom: 4,
@@ -176,7 +174,7 @@
                 map: gpsmap,
                 singleInfoWindow: true,
             });
-            geoXml.parse('<%= event_document_path(@event, @event.document) %>');
+            geoXml.parse('<%= event_event_data_document_path(@event, @event.event_data, @event.event_data.document) %>');
         <% else %>
             var options = {
                 map: ".location",
