Added partials for numeric attributes and added a way to specify units.

--- a/app/views/event_datas/_number_attribute_show.html.erb
+++ b/app/views/event_datas/_number_attribute_show.html.erb
@@ -1,7 +1,7 @@
 <% if  @event.event_data.valid_attributes.has_key? attribute_name %>
     <p><%= attribute_name.capitalize %>:
        <% if not @event.event_data.valid_attributes[attribute_name].nil? %>
-            <%= @event.event_data.valid_attributes[attribute_name] %>
-        <% end %>
+            <%= @event.event_data.valid_attributes[attribute_name] %> <%= units %>
+       <% end %>
     </p>
 <% end %>
