--- a/app/views/event_datas/_text_attribute_show.html.erb
+++ b/app/views/event_datas/_text_attribute_show.html.erb
@@ -1,7 +1,8 @@
 <% if  @event.event_data.valid_attributes.has_key? attribute_name %>
-    <p><%= attribute_name.capitalize %>:
-       <% if not @event.event_data.valid_attributes[attribute_name].nil? %>
+    <% if not @event.event_data.valid_attributes[attribute_name].nil? %>
+        <p>
+            <%= attribute_name.capitalize %>:
             <%= @event.event_data.valid_attributes[attribute_name] %>
-        <% end %>
-    </p>
+        </p>
+    <% end %>
 <% end %>
