--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -133,10 +133,10 @@
             <%= button_to "Enter Event Data", new_event_event_data_path(@event), method: :get, class: "btn btn-success btn-small" %>
         <% else %>
             <div style="float: left; width: auto;">
-                <%= button_to 'Edit Event', edit_event_event_data_path(@event, @event.event_data), method: :get, class: "btn btn-info btn-xs no-margin" %>
+                <%= button_to 'Edit Event Data', edit_event_event_data_path(@event, @event.event_data), method: :get, class: "btn btn-info btn-xs" %>
             </div>
             <div style="float: left; width: auto;">
-                <%= link_to "Delete Event Data", event_event_data_path(@event, @event.event_data), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-xs no-margin" %>
+                <%= link_to "Delete Event Data", event_event_data_path(@event, @event.event_data), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-xs" %>
             </div>
         <% end %>
     <% end %>
