--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -113,7 +113,7 @@
 <hr>
 
 
-<% if true# @event.is_passed? %>
+<% if @event.is_passed? %>
     <h3><%= fa_icon 'bar-chart fw' %> Event Data</h3>
     <% if @event.event_data %>
         <%= render 'event_datas/number_attribute_show', attribute_name: :duration, units: 'Minutes' %>
