--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,27 +18,6 @@
     </div>
 <% end %>
 
-<div class="table-responsive">
-    <table class="table table-bordered table-striped">
-        <thead>
-        <tr>
-            <th>Username</th>
-            <th>Email</th>
-            <th>Friend</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% @users.each do |user| %>
-            <tr>
-                <td><%= link_to user.username, user_path(user) %></td>
-                <td><%= user.email %></td>
-                <td>
-                    <% if add_friend_button? user %>
-                        <%= button_to "Add friend", friendships_path(friend_id: user), method: :post, class: "btn btn-success" %>
-                    <% end %>
-                </td>
-            </tr>
-        <% end %>
-        </tbody>
-    </table>
+<div class="row">
+    <%= render @users %>
 </div>
