--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1 class="page-header"><%= fa_icon 'user fw' %><%= @user.username %></h1>
 <% if add_friend_button? @user %>
-    <%= button_to "Add friend", friendships_path(friend_id: @user), method: :post, class: "btn btn-success pull" %>
+    <%= button_to "Add friend", friendships_path(friend_id: @user), method: :post, class: "btn btn-success" %>
 <% end %>
 <% flash.each do |name, msg| %>
     <div class="alert alert-dismissable alert-info">
@@ -10,16 +10,24 @@
 <% end %>
 <h2>About</h2>
 <ul>
-    <li>Username : <%= @user.username %></li>
-    <li>Email : <%= @user.email %></li>
+    <li>Email: <%= mail_to @user.email %></li>
     <li>Events created : <%= @user.created_events.count %></li>
 </ul>
 <h2>Friends</h2>
-<ul>
+<div class="row">
     <% @user.friendships.each do |f| %>
-        <li>
-            <%= link_to (f.friend_of @user), user_path(f.friend_of @user) %>
-            <%= (@user.eql? current_user) ? (link_to "Unfriend", f, :method => "delete") : "" %>
-        </li>
+        <div class="col-lg-6 col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading media">
+                    <a class="media-left" href="<%= user_path(f.friend_of @user) %>">
+                        <img class="profile"/>
+                    </a>
+                    <div class="media-body  panel-user">
+                        <h4><%= link_to (f.friend_of @user), user_path(f.friend_of @user) %></h4>
+                        <%= (@user.eql? current_user) ? (button_to "Unfriend", f, :method => "delete", data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-primary") : "" %>
+                    </div>
+                </div>
+            </div>
+        </div>
     <% end %>
-</ul>
+</div>
